primitives: ray: Cleanup and refactor to streams instead of loops.
Signed-off-by: Itamar Shalev <itamar1111111@gmail.com>